Prevented overflow on body

--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@
     cursor: default;
 }
 
+body, html {
+    overflow: hidden;
+}
+
 body, html, main {
     width: 100%;
     height: 100%;
